# codex-proxy

./: .gitignore  LICENSE  Makefile  README.md  codex_proxy_launcher.py  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json  vite.config.ts
codex_proxy/: app.py  codex_config.py  config.py  db.py  ids.py  log.py  main.py  providers.py  sse.py  translate.py  types.py  upstream.py
scripts/: build-windows.ps1
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/lib/: api.ts
src/pages/: Dashboard.svelte  Providers.svelte
static/: index.html
static/assets/: index-BGj8S01m.js  index-BlOVOP0n.js  index-CQLrPaff.css  index-DW36jayg.js  index-DeP19fav.css
tests-py/: test_app.py  test_codex_config.py  test_db.py  test_launcher.py  test_main.py  test_providers.py  test_translate.py  test_upstream.py
