[project]
name = "codex-proxy"
version = "0.1.0"
description = "Local desktop proxy that lets Codex use Chat Completions-compatible upstream providers."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "csurong" }]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "nanoid>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "pyinstaller>=6.0"]

[project.scripts]
codex-proxy = "codex_proxy.main:main"

[project.urls]
Homepage = "https://github.com/csurong/codex-proxy"
Repository = "https://github.com/csurong/codex-proxy"
Issues = "https://github.com/csurong/codex-proxy/issues"
