[package]
name = "codex-proxy"
version = "0.1.0"
edition = "2021"
authors = ["csurong"]
license = "MIT"
repository = "https://github.com/csurong/codex-proxy"
homepage = "https://github.com/csurong/codex-proxy"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
reqwest = { version = "0.12", features = ["blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
